src/test/deca/syntax/invalid/parser/oracle/method_block_invalid5.deca

class A { a a (a a) {while(1;){}} }